[project]
name = "landseer-backend"
version = "0.1.0"
description = "Land search and evaluation system for Vellore, Tamil Nadu"
requires-python = ">=3.8"

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = ["venv", "migrations"]

[tool.ruff.lint]
# No `UP` (pyupgrade): the runtime is Python 3.8, and pydantic schemas evaluate
# annotations at runtime, so PEP 604/585 rewrites (`X | None`, `list[...]`) are unsafe.
select = ["E", "F", "I", "W", "B"]
ignore = ["B008"]  # FastAPI uses `Depends(...)` as a default value by design.

[tool.ruff.lint.per-file-ignores]
"features/steps/*" = ["F811"]  # behave re-defines step functions by decorator.
"features/environment.py" = ["E402"]  # imports follow a sys.path shim.
"scripts/*" = ["E402"]  # imports follow a sys.path shim.

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra --cov=app --cov-report=term-missing --cov-fail-under=88"
